--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: violet;
+    color: black;
+}
+
+ol {
+    list-style-type: none;
+    padding: 0px;
+}
+
+li{
+    display: inline;
+    margin: 5px;
 }
