--- a/css/style.css
+++ b/css/style.css
@@ -16,5 +16,15 @@ li{
 
 h1{
     background-color: aqua;
-    padding: 20px 20px;
+    padding: 40px 40px;
+}
+
+nav {
+    background-color: green;
+    padding: 20px;
+}
+
+section {
+    background-color: red;
+    padding: 80px;
 }
