--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 body {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: black;
+}
+header{
+    background-color: yellow;
 }
 
 ol {
